# jira-mcp

./: Jira_MCP_Substack_Article.docx  README.md  SUBSTACK_ARTICLE.md  pyproject.toml
.claude/: settings.local.json
docs/: OAUTH_SETUP_GUIDE.md  setup-guide.md
src/jira_mcp/: auth.py  client.py  server.py
